added padding between repair cards & update more link

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <p>Вы сможете купить мотор б/у для  автомобилей Форд, Ауди, Мерседес, БМВ, Ситроен, Пежо, Рено, Тойота, Ниссан и других.</p>        
                             <p>Вы имеете возможность приобрести двигатель в любой комплектации. С навесным оборудованием или без него. Ко многим моторам мы даем в подарок коробку передач.</p>
                             <p>Наша компания может отправить ваш двигатель в любую точку России. Мы сотрудничаем со всеми транспортными компаниями и готовы оказать любую помощь по перевозке контрактного б/у двигателя в нужное для вас место.</p>
-                            <a class="ml-auto more_link" href="./pages/about_us.html">Больше информации</a>
+                            <a class="ml-auto more_link" href="./pages/about_us.html">Больше информации &nbsp&nbsp<i class="fas fa-long-arrow-alt-right"></i></a>
                         </div>
                         <div class="col-2 offset-4 text-left py-5">
                             <div class="schedule py-3">
