change icon's color in nav contacts

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="#about_us">Контакты</a>
                     </li>
                     <li class="nav-item">
-                        <span class="nav-link disabled"><i class="fas fa-at"></i><span class="pr-3"> 5044511@mail.ru </span><i class="pl-3 fas fa-phone"></i><span> +7(951)504-45-11</span></span>
+                        <span class="nav-link disabled"><i class="fas fa-at contact_icons"></i><span class="pr-3"> 5044511@mail.ru </span><i class="pl-3 fas fa-phone contact_icons"></i><span> +7(951)504-45-11</span></span>
                     </li>
                 </ul>
             </div>
