decreaced time interval between model line slides

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <section id="model_line" class="model_line">
         <div class="container">
             <h2>модельный ряд</h2>
-            <div id="model_line_carusel" class="carousel slide carousel-fade" data-ride="carousel">
+            <div id="model_line_carusel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row d-flex justify-content-around">
