Updated logo links

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand logo pr-5" href="#"><img src="../img/logo.png" class="w-75" alt="LOGO"></a>
+            <a class="navbar-brand logo pr-5" href="../index.html"><img src="../img/logo.png" class="w-75" alt="LOGO"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -103,7 +103,7 @@
     <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-3"><a class="logo pr-5 w-75" href="#"><img src="../img/logo.png" class="w-75" alt="LOGO"></a></div>
+                    <div class="col-3"><a class="logo pr-5 w-75" href="../index.html"><img src="../img/logo.png" class="w-75" alt="LOGO"></a></div>
                     <div class="col-3 resourse_links d-flex justify-content-around pt-4">
                         <a href=""><i class="fab fa-vk"></i></a>
                         <a href=""><i class="fab fa-youtube"></i></a>
