--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400,500,700,900&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
 
     <title>Hello, world!</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand logo pr-5" href="#"><img src="img/logo.png" class="w-75" alt="LOGO"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container text-center">
+            <a class="navbar-brand logo pr-md-5 ml-5 mr-sm-5" href="#"><img src="img/logo.png" class="w-75" alt="LOGO"></a>
+            <button class="navbar-toggler text-center mx-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             
@@ -61,7 +62,7 @@
                 <h2>наши предложения</h2>
             </div>
             <div class="row card_container">
-                <div class="col-4">
+                <div class="col-xs-12 col-md-4">
                     <div class="card_item">
                         <div class="img_border">
                         <img src="./img/offers/offer_1.jpg" alt="offer_1">
@@ -70,7 +71,7 @@
                         <p>от 30 000 руб.</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-xs-12 col-md-4">
                     <div class="card_item">
                         <div class="img_border">
                             <img src="./img/offers/offer_2.jpg" alt="offer_2">
@@ -79,7 +80,7 @@
                         <p>от 40 000 руб.</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-xs-12 col-md-4">
                     <div class="card_item">
                         <div class="img_border">
                             <img src="./img/offers/offer_3.jpg" alt="offer_3">
@@ -88,7 +89,7 @@
                         <p>от 45 000 руб.</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-xs-12 col-md-4">
                     <div class="card_item">
                         <div class="img_border">
                             <img src="./img/offers/offer_4.jpg" alt="offer_4">
@@ -97,7 +98,7 @@
                         <p>от 10 000 руб.</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-xs-12 col-md-4">
                     <div class="card_item">
                         <div class="img_border">
                             <img src="./img/offers/offer_5.jpg" alt="offer_5">
@@ -114,28 +115,28 @@
         <div class="container">
             <h2>наши преимущества</h2>
             <div class="row">
-                <div class="col-3">
+                <div class="col-md-3">
                         <div class="advantages_card">
                         <img src="img/qualities/hat.png" class="icon_border" alt="icon_1">
                         <h3>Лучшие специалисты</h3>
                         <p>Прошли сертифицированное обучение и аттестацию.</p>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                     <div class="advantages_card">
                         <img src="img/qualities/document.png" class="icon_border" alt="icon_2">
                         <h3>Подлинные документы</h3>
                         <p>Договоры, декларации, лицензирование, акты.</p>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                     <div class="advantages_card">
                         <img src="img/qualities/medal.png" class="icon_border" alt="icon_3">
                         <h3>Гарантия<br> качества</h3>
                         <p>Безаварийный пробег до<br> 20 000 км или 6 месяцев.</p>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                     <div class="advantages_card">
                         <img src="img/qualities/rubl.png" class="icon_border" alt="icon_4">
                         <h3>Возврат<br> неустойки</h3>
@@ -149,24 +150,24 @@
         <div class="container">
             <h2>как получить льготный ремонт</h2>
             <div class="row no-gutters">
-                <div class="col-6 repair_img">
+                <div class="col-md-6 repair_img">
                     <img src="img/repair/repair_1.jpg" alt="repair_1">
                 </div>
-                <div class="col-4 offset-1 mx-auto my-auto text-left">
+                <div class="col-md-4 offset-md-1 mx-auto my-auto text-left">
                     <h3>вторая покупка у нас</h3>
                     <p>При повторном приобретении любого оборудования в нашей компании Вы получаете скидку до ??%.</p>
                 </div>
-                <div class="col-4 offset-1 mx-auto my-auto text-right">
+                <div class="order-4 col-md-4 order-md-3 offset-md-1 mx-auto my-auto text-right">
                     <h3>дополнительный заказ</h3>
                     <p>При заказе дополнительного оборудования к ранее заказанному Вами агрегату получаете скидку до ??%.</p>
                 </div>
-                <div class="col-6 repair_img">
+                <div class="order-3 col-md-6 order-md-4 repair_img">
                     <img src="img/repair/repair_2.jpg" class="float-right" alt="repair_2.jpg">
                 </div>
-                <div class="col-6 repair_img">
+                <div class="col-md-6 repair_img">
                     <img src="img/repair/repair_3.jpg" alt="repair_3.jpg">
                 </div>
-                <div class="col-4 offset-1 mx-auto my-auto text-left">
+                <div class="col-md-4 offset-md-1 mx-auto my-auto text-left">
                     <h3>дисконтная программа</h3>
                     <p>Для постоянных клиентов нашей компании  - гибкая система скидок - больше покупаете, больше экономите.</p>
                 </div>
@@ -181,22 +182,22 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row d-flex justify-content-around">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Acura.png" alt="Acura">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Alfa_Romeo.png" alt="Alfa_Romeo">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Aston_Martin.png" alt="Aston_Martin">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Audi.png" alt="Audi">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/BMW.png" alt="BMW">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Bentley.png" alt="Bentley">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Acura.png" alt="Acura">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Alfa_Romeo.png" alt="Alfa_Romeo">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Aston_Martin.png" alt="Aston_Martin">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Audi.png" alt="Audi">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/BMW.png" alt="BMW">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Bentley.png" alt="Bentley">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row d-flex justify-content-around">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Bugatti.png" alt="Bugatti">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Buick.png" alt="Buick">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Cadillac.png" alt="Cadillac">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Chery.png" alt="Chery">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Chevrolet.png" alt="Chevrolet">
-                            <img class="d-block col-2 w-100 h-100" src="img/model_line/Chrysler.png" alt="Chrysler">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Bugatti.png" alt="Bugatti">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Buick.png" alt="Buick">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Cadillac.png" alt="Cadillac">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Chery.png" alt="Chery">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Chevrolet.png" alt="Chevrolet">
+                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Chrysler.png" alt="Chrysler">
                         </div>
                     </div>
                 </div>
@@ -208,20 +209,20 @@
             <div class="about_us_bg">
                 <div class="container">
                     <div class="row">
-                        <div class="col text-left py-5">
+                        <div class="col-md text-xs-center text-md-left py-5">
                             <p>Приветствуем вас на сайте нашей компании. Мы занимаемся продажей контрактных КПП и двигателей б/у привезенных из Европы, Англии, Кореи, Японии. </p>
                             <p>Вы сможете купить мотор б/у для  автомобилей Форд, Ауди, Мерседес, БМВ, Ситроен, Пежо, Рено, Тойота, Ниссан и других.</p>        
                             <p>Вы имеете возможность приобрести двигатель в любой комплектации. С навесным оборудованием или без него. Ко многим моторам мы даем в подарок коробку передач.</p>
                             <p>Наша компания может отправить ваш двигатель в любую точку России. Мы сотрудничаем со всеми транспортными компаниями и готовы оказать любую помощь по перевозке контрактного б/у двигателя в нужное для вас место.</p>
                             <a class="ml-auto more_link" href="./pages/about_us.html">Больше информации &nbsp&nbsp<i class="fas fa-long-arrow-alt-right"></i></a>
                         </div>
-                        <div class="col-2 offset-4 text-left py-5">
-                            <div class="schedule py-3">
+                        <div class="col-xs-12 col-md-2 offset-md-4 text-xs-center text-md-left py-5">
+                            <div class="schedule py-3 text-xs-center">
                                 <p class="text-center"> Часы работы</p>
                                 <p>Пн-Сб:&nbsp&nbsp&nbsp&nbsp09:00 - 17:00</p>
                                 <p>Вс:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspВыходной </p></p>
                             </div>
-                            <div class="contacts py-3">
+                            <div class="contacts py-3 text-xs-center">
                                 <p class="text-center">Контакты</p>
                                 <p><i class="fas fa-phone"></i> +7(951)504-45-11</p>
                                 <p><i class="fas fa-at"></i> 5044511@mail.ru</p>
@@ -246,19 +247,19 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                            <iframe width="984" height="554" src="https://www.youtube.com/embed/6WnuvbD1nO0?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/6WnuvbD1nO0?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="carousel-item">
-                            <iframe width="984" height="554" src="https://www.youtube.com/embed/RXmYnob933s?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/RXmYnob933s?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="carousel-item">
-                            <iframe width="984" height="554" src="https://www.youtube.com/embed/PyvHgFqknvM?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/PyvHgFqknvM?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="carousel-item">
-                            <iframe width="984" height="554" src="https://www.youtube.com/embed/TT8CCWm7pVA?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/TT8CCWm7pVA?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="carousel-item">
-                            <iframe width="984" height="554" src="https://www.youtube.com/embed/mX2QK_CuxFc?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/mX2QK_CuxFc?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#reviews_carusel_Indicators" role="button" data-slide="prev">
@@ -276,17 +277,17 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-3"><a class="logo pr-5 w-75" href="#"><img src="img/logo.png" class="w-75" alt="LOGO"></a></div>
-                <div class="col-3 resourse_links d-flex justify-content-around pt-4">
+                <div class="col-md-3"><a class="logo pr-5 w-75" href="#"><img src="img/logo.png" class="w-75" alt="LOGO"></a></div>
+                <div class="col-md-3 resourse_links d-flex justify-content-around pt-4">
                     <a href=""><i class="fab fa-vk"></i></a>
                     <a href=""><i class="fab fa-youtube"></i></a>
                     <a href=""><img class="instagram_icon" src="img/instagrm.png" alt=""></a>
                 </div>
-                <div class="col-3 schedule_footer pt-3">
+                <div class="col-md-3 schedule_footer pt-3 text-center text-md-left">
                         <p>Пн-Сб:&nbsp&nbsp&nbsp&nbsp&nbsp09:00 - 17:00</p>
                         <p>Вс:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspВыходной </p></p>
                 </div>
-                <div class="col-3 contacts_footer">
+                <div class="col-md-3 contacts_footer text-center text-md-left">
                         <p><i class="fas fa-phone"></i> +7(951)504-45-11</p>
                         <p><i class="fas fa-at"></i> 5044511@mail.ru</p>
                         <p><img class="internet_icon" src="img/internet_footer.png" alt="internet"> Http://oooooo.ru</p>
