update xs brackepoint

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p>Мы предлагаем, как комплексные решения “под ключ”,<br> так и отдельные услуги по выполнению различных видов<br> сервисных работ.</p>
                 </div>
             </div>
-            <div class="text-right">
+            <div class="text-right d-none d-md-block">
                 <a href="#" class="round up mr-auto"><i class="fas fa-angle-double-up x7"></i></a>
             </div>
         </div>
@@ -115,28 +115,28 @@
         <div class="container">
             <h2>наши преимущества</h2>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-12 mx-auto col-md-3">
                         <div class="advantages_card">
                         <img src="img/qualities/hat.png" class="icon_border" alt="icon_1">
                         <h3>Лучшие специалисты</h3>
                         <p>Прошли сертифицированное обучение и аттестацию.</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-12 mx-auto col-md-3">
                     <div class="advantages_card">
                         <img src="img/qualities/document.png" class="icon_border" alt="icon_2">
                         <h3>Подлинные документы</h3>
                         <p>Договоры, декларации, лицензирование, акты.</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-12 mx-auto col-md-3">
                     <div class="advantages_card">
                         <img src="img/qualities/medal.png" class="icon_border" alt="icon_3">
                         <h3>Гарантия<br> качества</h3>
                         <p>Безаварийный пробег до<br> 20 000 км или 6 месяцев.</p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-12 mx-auto col-md-3">
                     <div class="advantages_card">
                         <img src="img/qualities/rubl.png" class="icon_border" alt="icon_4">
                         <h3>Возврат<br> неустойки</h3>
