--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p>Мы предлагаем, как комплексные решения “под ключ”,<br> так и отдельные услуги по выполнению различных видов<br> сервисных работ.</p>
                 </div>
             </div>
-            <div class="text-right d-none d-md-block">
+            <div class="text-right d-none d-lg-block">
                 <a href="#" class="round up mr-auto"><i class="fas fa-angle-double-up x7"></i></a>
             </div>
         </div>
@@ -62,7 +62,7 @@
                 <h2>наши предложения</h2>
             </div>
             <div class="row card_container">
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-12 col-md-6 col-lg-4">
                     <div class="card_item">
                         <div class="img_border">
                         <img src="./img/offers/offer_1.jpg" alt="offer_1">
@@ -71,7 +71,7 @@
                         <p>от 30 000 руб.</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-12 col-md-6 col-lg-4">
                     <div class="card_item">
                         <div class="img_border">
                             <img src="./img/offers/offer_2.jpg" alt="offer_2">
@@ -80,7 +80,7 @@
                         <p>от 40 000 руб.</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-12 col-md-6 col-lg-4">
                     <div class="card_item">
                         <div class="img_border">
                             <img src="./img/offers/offer_3.jpg" alt="offer_3">
@@ -89,7 +89,7 @@
                         <p>от 45 000 руб.</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-12 col-md-6 col-lg-4">
                     <div class="card_item">
                         <div class="img_border">
                             <img src="./img/offers/offer_4.jpg" alt="offer_4">
@@ -98,7 +98,7 @@
                         <p>от 10 000 руб.</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-12 col-md-6 col-lg-4">
                     <div class="card_item">
                         <div class="img_border">
                             <img src="./img/offers/offer_5.jpg" alt="offer_5">
@@ -115,28 +115,28 @@
         <div class="container">
             <h2>наши преимущества</h2>
             <div class="row">
-                <div class="col-12 mx-auto col-md-3">
+                <div class="col-12 mx-auto col-md-6 col-lg-3">
                         <div class="advantages_card">
                         <img src="img/qualities/hat.png" class="icon_border" alt="icon_1">
                         <h3>Лучшие специалисты</h3>
                         <p>Прошли сертифицированное обучение и аттестацию.</p>
                     </div>
                 </div>
-                <div class="col-12 mx-auto col-md-3">
+                <div class="col-12 mx-auto col-md-6 col-lg-3">
                     <div class="advantages_card">
                         <img src="img/qualities/document.png" class="icon_border" alt="icon_2">
                         <h3>Подлинные документы</h3>
                         <p>Договоры, декларации, лицензирование, акты.</p>
                     </div>
                 </div>
-                <div class="col-12 mx-auto col-md-3">
+                <div class="col-12 mx-auto col-md-6 col-lg-3">
                     <div class="advantages_card">
                         <img src="img/qualities/medal.png" class="icon_border" alt="icon_3">
                         <h3>Гарантия<br> качества</h3>
                         <p>Безаварийный пробег до<br> 20 000 км или 6 месяцев.</p>
                     </div>
                 </div>
-                <div class="col-12 mx-auto col-md-3">
+                <div class="col-12 mx-auto col-md-6 col-lg-3">
                     <div class="advantages_card">
                         <img src="img/qualities/rubl.png" class="icon_border" alt="icon_4">
                         <h3>Возврат<br> неустойки</h3>
@@ -157,11 +157,11 @@
                     <h3>вторая покупка у нас</h3>
                     <p>При повторном приобретении любого оборудования в нашей компании Вы получаете скидку до ??%.</p>
                 </div>
-                <div class="order-4 col-md-4 order-md-3 offset-md-1 mx-auto my-auto text-right">
+                <div class="order-4 col-md-4 order-md-0 offset-md-1 mx-auto my-auto text-right">
                     <h3>дополнительный заказ</h3>
                     <p>При заказе дополнительного оборудования к ранее заказанному Вами агрегату получаете скидку до ??%.</p>
                 </div>
-                <div class="order-3 col-md-6 order-md-4 repair_img">
+                <div class="order-3 col-md-6 order-md-0 repair_img">
                     <img src="img/repair/repair_2.jpg" class="float-right" alt="repair_2.jpg">
                 </div>
                 <div class="col-md-6 repair_img">
@@ -216,7 +216,7 @@
                             <p>Наша компания может отправить ваш двигатель в любую точку России. Мы сотрудничаем со всеми транспортными компаниями и готовы оказать любую помощь по перевозке контрактного б/у двигателя в нужное для вас место.</p>
                             <a class="ml-auto more_link" href="./pages/about_us.html">Больше информации &nbsp&nbsp<i class="fas fa-long-arrow-alt-right"></i></a>
                         </div>
-                        <div class="col-xs-12 col-md-2 offset-md-4 text-xs-center text-md-left py-5">
+                        <div class="col-xs-12 col-md-4 offset-md-2 col-lg-3 offset-lg-2 text-xs-center text-md-left py-5 my-md-auto">
                             <div class="schedule py-3 text-xs-center">
                                 <p class="text-center"> Часы работы</p>
                                 <p>Пн-Сб:&nbsp&nbsp&nbsp&nbsp09:00 - 17:00</p>
@@ -277,17 +277,17 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-3"><a class="logo pr-5 w-75" href="#"><img src="img/logo.png" class="w-75" alt="LOGO"></a></div>
-                <div class="col-md-3 resourse_links d-flex justify-content-around pt-4">
+                <div class="col-md-6 col-lg-3"><a class="logo pr-5 w-75" href="#"><img src="img/logo.png" class="w-75" alt="LOGO"></a></div>
+                <div class="col-md-6 col-lg-3 resourse_links d-flex justify-content-around pt-4">
                     <a href=""><i class="fab fa-vk"></i></a>
                     <a href=""><i class="fab fa-youtube"></i></a>
                     <a href=""><img class="instagram_icon" src="img/instagrm.png" alt=""></a>
                 </div>
-                <div class="col-md-3 schedule_footer pt-3 text-center text-md-left">
+                <div class="col-md-6 col-lg-3 schedule_footer pt-3 text-center text-lg-left">
                         <p>Пн-Сб:&nbsp&nbsp&nbsp&nbsp&nbsp09:00 - 17:00</p>
                         <p>Вс:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspВыходной </p></p>
                 </div>
-                <div class="col-md-3 contacts_footer text-center text-md-left">
+                <div class="col-md-6 col-lg-3 contacts_footer text-center text-lg-left">
                         <p><i class="fas fa-phone"></i> +7(951)504-45-11</p>
                         <p><i class="fas fa-at"></i> 5044511@mail.ru</p>
                         <p><img class="internet_icon" src="img/internet_footer.png" alt="internet"> Http://oooooo.ru</p>
