update model line in  all brackepoints

--- a/index.html
+++ b/index.html
@@ -182,22 +182,22 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row d-flex justify-content-around">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Acura.png" alt="Acura">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Alfa_Romeo.png" alt="Alfa_Romeo">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Aston_Martin.png" alt="Aston_Martin">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Audi.png" alt="Audi">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/BMW.png" alt="BMW">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Bentley.png" alt="Bentley">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Acura.png" alt="Acura">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Alfa_Romeo.png" alt="Alfa_Romeo">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Aston_Martin.png" alt="Aston_Martin">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Audi.png" alt="Audi">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/BMW.png" alt="BMW">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Bentley.png" alt="Bentley">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row d-flex justify-content-around">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Bugatti.png" alt="Bugatti">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Buick.png" alt="Buick">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Cadillac.png" alt="Cadillac">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Chery.png" alt="Chery">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Chevrolet.png" alt="Chevrolet">
-                            <img class="d-block col-xs-4 col-md-2 w-100 h-100" src="img/model_line/Chrysler.png" alt="Chrysler">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Bugatti.png" alt="Bugatti">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Buick.png" alt="Buick">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Cadillac.png" alt="Cadillac">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Chery.png" alt="Chery">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Chevrolet.png" alt="Chevrolet">
+                            <img class="d-block col-xs-4 col-lg-2 w-100 h-100" src="img/model_line/Chrysler.png" alt="Chrysler">
                         </div>
                     </div>
                 </div>
