--- a/index.html
+++ b/index.html
@@ -237,39 +237,41 @@
     <section id="reviews">
             <div class="container">
             <h2>отзывы наших благодарных клиентов</h2>
-            <div id="reviews_carusel_Indicators" class="carousel slide carousel-fade" data-ride="false" data-pause="hover">
-                <ol class="carousel-indicators">
-                    <li data-target="#reviews_carusel_Indicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#reviews_carusel_Indicators" data-slide-to="1"></li>
-                    <li data-target="#reviews_carusel_Indicators" data-slide-to="2"></li>
-                    <li data-target="#reviews_carusel_Indicators" data-slide-to="3"></li>
-                    <li data-target="#reviews_carusel_Indicators" data-slide-to="4"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                            <iframe src="https://www.youtube.com/embed/6WnuvbD1nO0?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="row">
+                <div id="reviews_carusel_Indicators" class="col-12 carousel slide carousel-fade" data-ride="false" data-pause="hover">
+                    <ol class="carousel-indicators">
+                        <li data-target="#reviews_carusel_Indicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#reviews_carusel_Indicators" data-slide-to="1"></li>
+                        <li data-target="#reviews_carusel_Indicators" data-slide-to="2"></li>
+                        <li data-target="#reviews_carusel_Indicators" data-slide-to="3"></li>
+                        <li data-target="#reviews_carusel_Indicators" data-slide-to="4"></li>
+                    </ol>
+                    <div class="carousel-inner w-100">
+                        <div class="carousel-item active">
+                                <iframe class="w-100 h-100" src="https://www.youtube.com/embed/6WnuvbD1nO0?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="carousel-item">
+                                <iframe class="w-100 h-100" src="https://www.youtube.com/embed/RXmYnob933s?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="carousel-item">
+                                <iframe class="w-100 h-100" src="https://www.youtube.com/embed/PyvHgFqknvM?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="carousel-item">
+                                <iframe class="w-100 h-100" src="https://www.youtube.com/embed/TT8CCWm7pVA?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="carousel-item">
+                                <iframe class="w-100 h-100" src="https://www.youtube.com/embed/mX2QK_CuxFc?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                            <iframe src="https://www.youtube.com/embed/RXmYnob933s?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                    <div class="carousel-item">
-                            <iframe src="https://www.youtube.com/embed/PyvHgFqknvM?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                    <div class="carousel-item">
-                            <iframe src="https://www.youtube.com/embed/TT8CCWm7pVA?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                    <div class="carousel-item">
-                            <iframe src="https://www.youtube.com/embed/mX2QK_CuxFc?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                    <a class="carousel-control-prev" href="#reviews_carusel_Indicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#reviews_carusel_Indicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-                <a class="carousel-control-prev" href="#reviews_carusel_Indicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#reviews_carusel_Indicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
             <span class="btn btn-outline-dark"><a href="#about_us">получить предложение</a></span>
         </div>
