--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand logo pr-5" href="../index.html"><img src="../img/logo.png" class="w-75" alt="LOGO"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container text-center">
+            <a class="navbar-brand logo pr-md-5 ml-5 mr-sm-5" href="../index.html"><img src="../img/logo.png" class="w-75" alt="LOGO"></a>
+            <button class="navbar-toggler text-center mx-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             
@@ -42,9 +42,9 @@
             <h3>капитальный ремонт или контрактный двигатель? </h3>
             <div class="line"></div>
             <div class="row no-gutters">
-                <div class="col-6">
+                <div class="col-md-6 mr-auto">
                     <img src="img/more_1.jpg" alt=""></div>
-                <div class="col-4 offset-1 text-left mx-auto my-auto">
+                <div class="col-md-5 col-lg-4 offset-lg-1 mx-auto my-auto text-md-left">
                     <p>Специалисты никогда сразу не скажут, в какую цену обойдется Вам ремонт двигателя.</p>
                     <p>О конечной стоимости вы узнаете только по предоставлению счета за проделанные работы. И он окажется гораздо больше начальной цены.</p>
                 </div>
@@ -59,11 +59,11 @@
             <h3>гарантия качества или кот в мешке?</h3>
             <div class="line"></div>
             <div class="row no-gutters">
-                <div class="col-4 offset-1 text-right mx-auto my-auto">
+                <div class="order-2 col-md-5 col-lg-4 order-md-0 offset-lg-1 mx-auto my-auto text-md-right">
                     <p>Перед снятием мотора с автомобиля наши сотрудники производят видеосъемку работы двигателя. Поэтому мы на 100 процентов уверены в работоспособности и качестве продаваемых нами автозапчастей.</p>
                     <p>Гораздо дешевле купить уже проверенный и оттестированный б/у двигатель.</p>
                 </div>
-                <div class="col-6 ml-auto">
+                <div class="order-1 col-md-6 order-md-0 ml-auto">
                     <img src="img/more_2.jpg" alt="">
                 </div>
             </div>
@@ -74,10 +74,10 @@
             <h3>где приобрести навесное оборудование? </h3>
             <div class="line"></div>
             <div class="row no-gutters">
-                <div class="col-6">
+                <div class="col-md-6 mr-auto">
                     <img src="img/more_3.jpg" alt="">
                 </div>
-                <div class="col-4 offset-1 text-left mx-auto my-auto">
+                <div class="col-md-5 col-lg-4 offset-lg-1 mx-auto my-auto text-md-left">
                     <p>Помимо продажи контрактных двигателей осуществляем торговлю навесными агрегатами.</p>
                     <p>В нашем магазине Вы сможете приобрести генератор, стартер, насос кондиционера, гидроусилителя руля, насосы высокого давления (ТНВД), модули зажигания, форсунки дизельные и бензиновые, ноускаты, турбины.</p>
                     <p>Все моторы приходят в комплекте с механическими и автоматическими коробками передач. Мы также подберем для Вас любую МКПП или АКПП.</p>
@@ -90,12 +90,12 @@
             <h3>есть сомнения в качестве товара? </h3>
             <div class="line"></div>
             <div class="row no-gutters">
-                <div class="col-4 offset-1 text-right mx-auto my-auto">
+                <div class="order-2 col-md-5 col-lg-4 offset-lg-1 order-md-0 mx-auto my-auto text-md-right">
                     <p>Наша компания старается быть честной со своим клиентами. В случае, если Вы оказались тем единственным покупателем, которому не повезло с качеством товара, мы никогда Вас не бросим и не обманем.</p>
                     <p>Вы всегда сможете вернуть некачественный товар или обменять его на аналогичный.</p>
                     <p>При возможности мы всегда готовы сделать Вам скидку. Для постоянных клиентов у нас работает целая система скидок. Больше покупаете - больше бонусов получаете.</p>
                 </div>
-                <div class="col-6 ml-auto">
+                <div class="order-1 col-md-6 order-md-0 ml-auto">
                     <img src="img/more_4.jpg" alt="">
                 </div>
             </div>
@@ -104,17 +104,17 @@
     <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-3"><a class="logo pr-5 w-75" href="../index.html"><img src="../img/logo.png" class="w-75" alt="LOGO"></a></div>
-                    <div class="col-3 resourse_links d-flex justify-content-around pt-4">
+                    <div class="col-md-6 col-lg-3"><a class="logo pr-5 w-75" href="../index.html"><img src="../img/logo.png" class="w-75" alt="LOGO"></a></div>
+                    <div class="col-md-6 col-lg-3 resourse_links d-flex justify-content-around pt-4">
                         <a href=""><i class="fab fa-vk"></i></a>
                         <a href=""><i class="fab fa-youtube"></i></a>
                         <a href=""><img class="instagram_icon" src="../img/instagrm.png" alt=""></a>
                     </div>
-                    <div class="col-3 schedule_footer pt-3">
+                    <div class="col-md-6 col-lg-3 schedule_footer pt-3 text-center text-lg-left">
                             <p>Пн-Сб:&nbsp&nbsp&nbsp&nbsp&nbsp09:00 - 17:00</p>
                             <p>Вс:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspВыходной </p></p>
                     </div>
-                    <div class="col-3 contacts_footer">
+                    <div class="col-md-6 col-lg-3 contacts_footer text-center text-lg-left">
                             <p><i class="fas fa-phone"></i> +7(951)504-45-11</p>
                             <p><i class="fas fa-at"></i> 5044511@mail.ru</p>
                             <p><img class="internet_icon" src="../img/internet_footer.png" alt="internet"> Http://oooooo.ru</p>
