--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
                 </div>
                 <div class="col-md-4 offset-md-1 mx-auto my-auto text-left">
                     <h3>вторая покупка у нас</h3>
-                    <p>При повторном приобретении любого оборудования в нашей компании Вы получаете скидку до ??%.</p>
+                    <p>При повторном приобретении любого оборудования в нашей компании Вы получаете скидку до 20%.</p>
                 </div>
                 <div class="order-4 col-md-4 order-md-0 offset-md-1 mx-auto my-auto text-right">
                     <h3>дополнительный заказ</h3>
-                    <p>При заказе дополнительного оборудования к ранее заказанному Вами агрегату получаете скидку до ??%.</p>
+                    <p>При заказе дополнительного оборудования к ранее заказанному Вами агрегату получаете скидку до 15%.</p>
                 </div>
                 <div class="order-3 col-md-6 order-md-0 repair_img">
                     <img src="img/repair/repair_2.jpg" class="float-right" alt="repair_2.jpg">
@@ -214,6 +214,7 @@
                             <p>Вы сможете купить мотор б/у для  автомобилей Форд, Ауди, Мерседес, БМВ, Ситроен, Пежо, Рено, Тойота, Ниссан и других.</p>        
                             <p>Вы имеете возможность приобрести двигатель в любой комплектации. С навесным оборудованием или без него. Ко многим моторам мы даем в подарок коробку передач.</p>
                             <p>Наша компания может отправить ваш двигатель в любую точку России. Мы сотрудничаем со всеми транспортными компаниями и готовы оказать любую помощь по перевозке контрактного б/у двигателя в нужное для вас место.</p>
+                            <p>Наш адрес: Ростовская обл,. г. Новочеркасск, Харьковское шоссе, 9А</p>
                             <a class="ml-auto more_link" href="./pages/about_us.html">Больше информации &nbsp&nbsp<i class="fas fa-long-arrow-alt-right"></i></a>
                         </div>
                         <div class="col-xs-12 col-md-4 offset-md-2 col-lg-3 offset-lg-2 text-xs-center text-md-left py-5 my-md-auto">
@@ -248,10 +249,10 @@
                     </ol>
                     <div class="carousel-inner w-100">
                         <div class="carousel-item active">
-                                <iframe class="w-100 h-100" src="https://www.youtube.com/embed/6WnuvbD1nO0?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="w-100 h-100" src="https://www.youtube.com/embed/l6eQp_xO2lg?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="carousel-item">
-                                <iframe class="w-100 h-100" src="https://www.youtube.com/embed/RXmYnob933s?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="w-100 h-100" src="https://www.youtube.com/embed/Kn24rfV4IBQ?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="carousel-item">
                                 <iframe class="w-100 h-100" src="https://www.youtube.com/embed/PyvHgFqknvM?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
