--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400,500,700,900&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -106,9 +107,9 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-3"><a class="logo pr-5 w-75" href="../index.html"><img src="../img/logo.png" class="w-75" alt="LOGO"></a></div>
                     <div class="col-md-6 col-lg-3 resourse_links d-flex justify-content-around pt-4">
-                        <a href=""><i class="fab fa-vk"></i></a>
-                        <a href=""><i class="fab fa-youtube"></i></a>
-                        <a href=""><img class="instagram_icon" src="../img/instagrm.png" alt=""></a>
+                        <a href="https://vk.com/forsajservis" target="_blank"><i class="fab fa-vk"></i></a>
+                        <a href="https://www.youtube.com/channel/UC2Kl3e2a1_IP1WchKQyCXHw" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/forsajservis61/" target="_blank"><img class="instagram_icon" src="../img/instagrm.png" alt=""></a>
                     </div>
                     <div class="col-md-6 col-lg-3 schedule_footer pt-3 text-center text-lg-left">
                             <p>Пн-Сб:&nbsp&nbsp&nbsp&nbsp&nbsp09:00 - 17:00</p>
