updated navbar link name

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="#our_offers">Предложения</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about_us">Контакты</a>
+                        <a class="nav-link" href="#about_us">О нас</a>
                     </li>
                     <li class="nav-item">
                         <span class="nav-link disabled"><i class="fas fa-at contact_icons"></i><span class="pr-3"> 5044511@mail.ru </span><i class="pl-3 fas fa-phone contact_icons"></i><span> +7(951)504-45-11</span></span>
